[gd_scene load_steps=6 format=3 uid="uid://cqx0qux4msnm7"]

[ext_resource type="Script" uid="uid://ui362fnglx0k" path="res://sources/minigames/caterpillar/caterpillar.gd" id="1_addut"]
[ext_resource type="PackedScene" uid="uid://dryu60mtiqv3" path="res://sources/minigames/caterpillar/caterpillar_body.tscn" id="2_vrjdf"]
[ext_resource type="Texture2D" uid="uid://cmhvrs2jaqhwd" path="res://assets/minigames/caterpillar/graphics/caterpillar_tail.png" id="4_noi0q"]
[ext_resource type="PackedScene" uid="uid://cm7e5ir8ykhpv" path="res://sources/minigames/caterpillar/caterpillar_head.tscn" id="17_ty72k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6qw72"]
size = Vector2(34, 256)

[node name="Caterpillar" type="Node2D"]
script = ExtResource("1_addut")

[node name="BodyParts" type="Node2D" parent="."]

[node name="CaterpillarBody" parent="BodyParts" instance=ExtResource("2_vrjdf")]

[node name="Head" parent="." instance=ExtResource("17_ty72k")]
position = Vector2(300, -180)

[node name="EatArea2D" type="Area2D" parent="Head"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head/EatArea2D"]
position = Vector2(200, 0)
shape = SubResource("RectangleShape2D_6qw72")

[node name="Tail" type="Sprite2D" parent="."]
position = Vector2(0, -90)
texture = ExtResource("4_noi0q")

[connection signal="area_entered" from="Head/EatArea2D" to="." method="_on_eat_area_2d_area_entered"]
[connection signal="body_entered" from="Head/EatArea2D" to="." method="_on_eat_area_2d_body_entered"]
